[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ElbowSig"
version = "1.3.0"
description = "Elbow significance tools for clustering"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.5",
  "scikit-learn>=1.1",
  "scikit-fuzzy>=0.4",
  "pandas>=1.4",
  "statsmodels>=0.13"
]

[tool.setuptools]
py-modules = ["ElbowSig"]
